gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/InvalidCredentialsException.java
package com.example.gymcrm.api.rest.error.exception;

public class InvalidCredentialsException extends RuntimeException {
    public InvalidCredentialsException(String message) {
        super(message);
    }
}
